WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
199763
[WHLSL] Return statements don't need to keep track of the function they're in
https://bugs.webkit.org/show_bug.cgi?id=199763
Summary
[WHLSL] Return statements don't need to keep track of the function they're in
Robin Morisset
Reported
2019-07-12 15:50:35 PDT
This is only used in the Checker, and it can easily keep track of the current function. Doing it this way spares us from tracking the current function in the name resolver, and saves 8 bytes from every Return.
Attachments
Patch
(7.28 KB, patch)
2019-07-12 15:55 PDT
,
Robin Morisset
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Robin Morisset
Comment 1
2019-07-12 15:55:24 PDT
Created
attachment 374046
[details]
Patch Not yet up for review because I've not yet tested it.
Robin Morisset
Comment 2
2019-07-12 16:27:17 PDT
Comment on
attachment 374046
[details]
Patch It passes all tests, so asking for review.
Myles C. Maxfield
Comment 3
2019-07-12 21:59:42 PDT
Comment on
attachment 374046
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=374046&action=review
> Source/WebCore/Modules/webgpu/WHLSL/AST/WHLSLReturn.h:-60 > - void setFunction(FunctionDefinition* functionDefinition) { m_function = functionDefinition; }
We might have to add this back in if we add a pass to inline things.
WebKit Commit Bot
Comment 4
2019-07-13 10:43:47 PDT
Comment on
attachment 374046
[details]
Patch Clearing flags on attachment: 374046 Committed
r247419
: <
https://trac.webkit.org/changeset/247419
>
WebKit Commit Bot
Comment 5
2019-07-13 10:43:49 PDT
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 6
2019-07-13 10:44:17 PDT
<
rdar://problem/53054937
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug