Source/WebCore/Modules/webgpu/WHLSL/WHLSLNameResolver.h
@@ -44,11 +44,6 @@ public:
 
     virtual ~NameResolver();
 
-    void setCurrentFunctionDefinition(AST::FunctionDefinition* functionDefinition)
-    {
-        m_currentFunction = functionDefinition;
-    }
-
 private:
     void visit(AST::FunctionDefinition&) override;
     void visit(AST::NativeFunctionDeclaration&) override;
@@ -60,15 +55,11 @@ private:
     void visit(AST::ForLoop&) override;
     void visit(AST::VariableDeclaration&) override;
     void visit(AST::VariableReference&) override;
-    void visit(AST::Return&) override;
-    void visit(AST::PropertyAccessExpression&) override;
     void visit(AST::DotExpression&) override;
-    void visit(AST::CallExpression&) override;
     void visit(AST::EnumerationMemberLiteral&) override;
 
     NameContext& m_nameContext;
     HashSet<AST::TypeReference*> m_typeReferences;
-    AST::FunctionDefinition* m_currentFunction { nullptr };
     NameResolver* m_parentNameResolver { nullptr };
 };
 
